Add quadratic function

--- a/pages/fun_functionProperties.html
+++ b/pages/fun_functionProperties.html
@@ -8,7 +8,7 @@ mathjax: true
 
 <div class="content">
 
-<h1>Funkcie a ich vlastnosti</h1>
+<h1><a id="fun_whatIsFunction">Funkcie a ich vlastnosti</a></h1>
 
 Už odpradávna pozorovali ľudia svet okolo seba. No nie len to. Svet si menili a prispôsobovali tak, aby sa im na ňom bývalo čo najlepšie. Popri tom všetkom prišli na to, že <b>niektoré veci medzi sebou súvisia</b>. Vzťahy medzi vecami skúmali a používali ich, aby si čo najviac uľahčili život.<br /><br />
 
@@ -37,7 +37,7 @@ $$f: y&#8594;f(x)$$
 
 Číslo <b><i>x</i> sa nazýva nezávislá premenná</b>. To je číslo, ktoré sa pchá do funkcie. <b>Číslo <i>y</i> sa volá závislá premenná</b>. Vypočítavá sa z čísla <i>x</i>, teda od neho závisí. Preto sa <i>y</i> volá závislá premenná.
 
-<h2>Zobrazovanie funkcií</h2>
+<h2><a id="fun_functionDisplaying">Zobrazovanie funkcií</a></h2>
 
 Výsledky funkcie chceme nejako pekne zobraziť. Ak by boli čísla nahádzané na dvoch kopách, na jednej vstupy do funkcie a na druhej výstupy z funkcie, bolo by to trošilinku neprehľadné. Preto ľudia rozmýšľali nad nejakou peknou reprezentáciou funkcií, z ktorej by aj niečo vyčítali. <br /><br />
 
