--- a/pages/vocabulary.html
+++ b/pages/vocabulary.html
@@ -56,6 +56,10 @@ mathjax: true
 </div><br />
 
 <div class='vocabEntry'>
+<b>Koeficient</b> <div>Je to číslo, s ktorým sa násobí nejaká premenná/neznáma. Napríklad majme funkciu $f(x)=ax^2$, tak koeficient je to číslo <i>a</i>.</div><br />
+</div><br />
+
+<div class='vocabEntry'>
 <b>Konštantný</b> <div>Niečo, čo sa nemení. Je to stále rovnaké, nech sa deje, čo sa deje.</div><br />
 </div><br />
 
