--- a/pages/fun_linearFunction.html
+++ b/pages/fun_linearFunction.html
@@ -8,7 +8,7 @@ mathjax: true
 
 <div class="content">
 
-<h1>Lineárna funkcia</h1>
+<h1><a id="fun_linearFunction">Lineárna funkcia</a></h1>
 
 Určite si už postrehol, že na svete existuje niečo také ako práca, výplata a bankový účet. Možno máš s tým už aj osobné skúsenosti a ak nie, budeme predpokladať, že si o tom už počul. Ešte potrebujeme nejakú drahšiu vec, ktorú by si si chcel kúpiť, tak si ju prosím predstav. Ideme šetriť.
 <br /> <br />
