Add minor features
Add goniometric to functions and letter to number sets

--- a/pages/fun_quadraticFunction.html
+++ b/pages/fun_quadraticFunction.html
@@ -69,7 +69,7 @@ Teda výsledok funkcie v bode 8,3 je 93,135.<br /><br />
   <figcaption>Obr. 1.: x<sup>2</sup> má taký rast, že v každom kroku pribudne viac ako v tom predošlom. Nedeje sa to však halabala, ale má to svoju zákonitosť. To, o koľko sa zväčšuje rast, sa mení lineárne. Ak daná vec klesá, tak sa samozrejme nebavíme o pribúdaní, ale odbúdaní.</figcaption>
 </figure>
 
-<div class="homework">
+<div class="blueArea">
   <h3>&#x1f989; ÚLOHA</h3>
   Skús si spraviť podobnú tabuľku pre viaceré $x^2$. Pre každé vyrátaj zopár základných hodnôt, vyrátaj rozdiely medzi nimi a ešte vyrátaj aj rozdiely medzi týmito rozdielmi. Tu je zopár inšpirácii:
   
@@ -131,7 +131,7 @@ Do tretice je tu posledná vec, posledný koeficient. A to je <b>číslo, ktoré
   <figcaption>Obr. 8.: Toto číslo sa pripočíta do výsledku v každom "kroku" funkcie. Vo všeobecnosti sa označuje písmenom <i>c</i>.</figcaption>
 </figure>
 
-<div class="homework">
+<div class="blueArea">
   <h3>&#x1f989; ÚLOHA</h3>
   Skús nakresliť kocky pre nasledujúce funkcie:
   
@@ -265,7 +265,7 @@ calculator.setExpression({
 });
 </script><br /><br />
 
-<div class="homework">
+<div class="blueArea">
   <h3>&#x1f989; ÚLOHA</h3>
   Bez toho, aby si niečo počítal, nakresli grafy pre tieto funkcie. Mimochodom, na tých tvojich obrázkoch majú byť iba osi a parabola. Ide o to, či zhruba trafíš, ako má byť parabola vysoko, ako má byť otočená, či má byť strmá alebo čapatá a podobe.
   
