--- a/pages/num_numberSets.html
+++ b/pages/num_numberSets.html
@@ -3,6 +3,7 @@ title: Číselné množiny
 description: "Čísla delíme do skupín, ktoré sa nazývajú množiny. Poznáme prirodzené čísla (ozn. N), celé čísla (ozn. Z), riacionálne čísla (ozn. Q), iracionálne čísla (ozn. Q') a reálne čísla (ozn. R). Okrem nich existujú aj iné."
 keywords: "číselné množiny, prirodzené čísla, celé čísla, racionálne čísla, iracionálne čísla, reálne čísla"
 permalink: ciselne_mnoziny
+mathjax: true
 ---
 
 <div class="content">
@@ -22,6 +23,21 @@ permalink: ciselne_mnoziny
   <img src="assets/images/numSets.png" alt="Číselné množiny">
   <figcaption>Obr. 1.: Tu sú číselné množiny aj s príkladmi čísiel, ktoré do nich patria.</figcaption>
 </figure>
+
+<div class="blueArea">
+  <h3>&#x1f4dd; NAPÍSALI STE NÁM</h3>
+  <b>Jeden z našich čitateľov nás upozornil, že iracionálne čísla sa označujú veľkým tlačeným I.</b> Musíme mu dať za pravdu, pretože skutočne sa toto označenie používa v spojitosti s iracionálnymi číslami.<br /><br />
+
+  Nie však vždy a všade. <b>Iracionálne čísla nemajú svoje pevné označenie</b>. Môže to byť z historických dôvodov, pretože nikdy nevznikla potreba nejak špeciálne označovať iracionálne čísla. Ľudia ich ako samostatnú množinu málo používali. Napríklad asi nenájdeme veľa funkcií zadefinovaných na množine iracionálnych čísiel.<br /><br />
+
+  My sme <b>I nepoužili preto, lebo písmenom I sa niekedy označujú aj imaginárne čísla</b>. Dokonca sem-tam v <b>anglickej literatúre sa I používa pre celé čísla</b>, namiesto Z. Je to preto, lebo po anglicky sa povedia celé čísla <i>integers</i>. Namiesto toho sme zvolili iné označenie, a to Q'.<br /><br />
+
+  Oboje označenie I aj Q' je správne a môže sa používať. <b>Najpresnejšie označenie, ktoré sme našli, je zadefinované pomocou rozdielu dvoch množín</b>. Niečo v zmysle: iracionálne čísla sú všetky reálne čísla, ktoré nie sú racionálne.<br /><br />
+
+  $$ \mathbb{R} - \mathbb{Q} $$
+
+  Ak by ste aj vy našli nejakú nepresnosť, alebo nám chcete napísať len tak, môžete nám písať buď na mail <b><a href="mailto:{{ site.email }}">{{ site.email }}</a></b>, alebo cez <b><a href="https://forms.gle/RkKkeaZHCgeWXSVUA" target="_blank">google formuláre</a></b>. Tešíme sa &#128522;.
+</div>
 
 <h2>Ako vznikli číselné množiny</h2>
 Na začiatku našich dejín ľudia nepotrebovali počítať, nemali žiadnu matematiku a bolo im dobre. Lenže potom sa začali rozvíjať, vykonávali čoraz náročnejšie činnosti a už začali potrebovať čísla.<br /><br />
