Add google form to stat pages

--- a/pages/stat_PositionMeasures.html
+++ b/pages/stat_PositionMeasures.html
@@ -10,6 +10,8 @@ mathjax: true
 
 <h1>Miery polohy</h1>
 
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfSqzs0I3Db-nApyWSUcvTVcuwYNfZDg_ZXWqRGMN-q5RJyoQ/viewform?embedded=true" width="100%" height="480" frameborder="0" marginheight="0" marginwidth="0">Načítava sa…</iframe><br /><br />
+
 Miery polohy hovoria o polohe údajov na číselnej osi. Sú to čísla, ktoré vhodne reprezentujú údaje. K mieram polohy patrí modus, kvantily a stredná hodnota. Stredná hodnota môže byť buď medián alebo priemer.<br /><br />
 
 Vďaka mieram polohy vieš, v akých číslach sa ti pohybujú údaje bez toho, aby si si ich musel všetky prečítať. Napríklad ak priemer cien bytov je 90 000 eur, nemusíš poznať všetky ceny bytov, aby si vedel, že ceny bytov sa pohybujú v desiatkach tisíc. Keď meriaš teploty v januári, priemer ti vyjde možno -5&#8451;. Vieš, že teploty sa budú pohybovať niekde v mínusových číslach.<br /><br />
