--- a/pages/stat_correlation.html
+++ b/pages/stat_correlation.html
@@ -10,6 +10,8 @@ mathjax: true
 
 <h1>Korelácia</h1>
 
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfSqzs0I3Db-nApyWSUcvTVcuwYNfZDg_ZXWqRGMN-q5RJyoQ/viewform?embedded=true" width="100%" height="480" frameborder="0" marginheight="0" marginwidth="0">Načítava sa…</iframe><br /><br />
+
 Korelácia hovorí o tom, či a ako sú dáta od seba závislé. Vďaka korelácií by sme zistili, či spolu súvisí <i>overall</i> hráča a jeho cena. Možno by sme našli vzťah, že čím je hráč lepší, tým bude drahší. Koreláciu medzi výškou a vekom hráča by sme asi nenašli, pretože výška hráča nezávisí od jeho veku. Zápornú koreláciu by sme možno našli medzi atribútmi <i>gk_diving</i> a <i>skill_ball_control</i>. Prvý hovorí o tom, ako dobre sa brankár hádže za loptou a druhý o tom, ako dobre hráč vedie loptu. Môžeme predpokladať, že hráči, ktorí sa dobre hádžu po lopte sú brankári a vo vedení lopty sú slabší. Hráči v poli sa zasa budú biedne hádzať za loptou, ale vedenie lopty budú mať excelentné. Či sú tieto naše hypotézy pravdivé, sa dá overiť korelačným koeficientom.
 
 <h2>Korelačný koeficient</h2>
