--- a/pages/stat_outliers.html
+++ b/pages/stat_outliers.html
@@ -9,6 +9,8 @@ permalink: outliers
 
 <h1>Outliers</h1>
 
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfSqzs0I3Db-nApyWSUcvTVcuwYNfZDg_ZXWqRGMN-q5RJyoQ/viewform?embedded=true" width="100%" height="480" frameborder="0" marginheight="0" marginwidth="0">Načítava sa…</iframe><br /><br />
+
 Na koniec si povieme niečo o outliers. Táto vec nepatrí k nástrojom štatistiky (teda k vzorcom), ale sú to dáta.<br /><br />
 
 Ako angličtiny znalý človek, vieš, že outliers znamená <i>tí, čo ležia mimo</i>. Out je von alebo mimo a liers je ležiaci. Nevieme presný termín v slovenčine, tak budeme používať tento anglický. Outlier je teda to, čo leží mimo. V dátach sú to údaje, ktoré sú absolútne od veci. Buď sú príliš veľké alebo príliš malé.<br /><br />
