--- a/pages/stat_playerAnalysis.html
+++ b/pages/stat_playerAnalysis.html
@@ -10,6 +10,8 @@ mathjax: true
 
 <h1>Analýza údajov o futbalistoch</h1>
 
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfSqzs0I3Db-nApyWSUcvTVcuwYNfZDg_ZXWqRGMN-q5RJyoQ/viewform?embedded=true" width="100%" height="480" frameborder="0" marginheight="0" marginwidth="0">Načítava sa…</iframe><br /><br />
+
 Po dlhých kapitolách sme sa dostali na koniec a máme všetky potrebné nástroje štatistiky. Poznáme miery polohy, miery variability aj koreláciu. Ideme ich teda teraz aplikovať na futbalové tímy a konečne vyberieme jeden z nich. <br /><br />
 
 <div class='overflowedItem'>
