--- a/pages/stat_data.html
+++ b/pages/stat_data.html
@@ -9,6 +9,8 @@ permalink: statistika_udaje
 
 <h1>Údaje v štatistike</h1>
 
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfSqzs0I3Db-nApyWSUcvTVcuwYNfZDg_ZXWqRGMN-q5RJyoQ/viewform?embedded=true" width="100%" height="480" frameborder="0" marginheight="0" marginwidth="0">Načítava sa…</iframe><br /><br />
+
 <h2>Získavanie údajov</h2>
 Štatistika nie sú iba nejaké vzorce, ktorými sa dajú z dát vytiahnuť informácie. Štatistika začína už pri získavaní údajov.<br /><br />
 
