--- a/pages/stat_usage.html
+++ b/pages/stat_usage.html
@@ -9,6 +9,8 @@ permalink: naozajstne_vyuzitie_statistiky
 
 <h1>Naozajstné využitie štatistiky</h1>
 
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfSqzs0I3Db-nApyWSUcvTVcuwYNfZDg_ZXWqRGMN-q5RJyoQ/viewform?embedded=true" width="100%" height="480" frameborder="0" marginheight="0" marginwidth="0">Načítava sa…</iframe><br /><br />
+
 Na stránke ourworldindata.org sú uverejnené rôzne štatistiky, ktoré sa týkajú nášho sveta. Je tam niečo o životnom prostredí, vývoji populácie, zdraví a ďalších veciach. Požičali sme si tri články, ktoré tu v krátkosti opíšeme, aby si videl, že štatistika má naozajstné využitie. Články sú po anglicky, tak ich nadpisy necháme v pôvodnom znení.
 
 <h2>Human height</h2>
