--- a/pages/fun_linearFunction_DEPRECATED.html
+++ b/pages/fun_linearFunction_DEPRECATED.html
@@ -1,14 +1,14 @@
 ---
-title: Lineárna funkcia
+title: Lineárna funkcia - stará verzia
 description: "Lineárna funkcia opisuje vzťah, kedy sa nejaká vec mení v čase stále rovnako. Napríklad aj šetrenie peňazí, keď si každý mesiac odložíš rovnakú sumu, opisuje lineárna funkcia."
 keywords: "lineárna funkcia"
-permalink: linearna_funkcia
+permalink: linearna_funkcia_stara
 mathjax: true
 ---
 
 <div class="content">
 
-<h1><a id="fun_linearFunction">Lineárna funkcia</a></h1>
+<h1>Lineárna funkcia</h1>
 
 Určite si už postrehol, že na svete existuje niečo také ako práca, výplata a bankový účet. Možno máš s tým už aj osobné skúsenosti a ak nie, budeme predpokladať, že si o tom už počul. Ešte potrebujeme nejakú drahšiu vec, ktorú by si si chcel kúpiť, tak si ju prosím predstav. Ideme šetriť.
 <br /> <br />
