Replace notefreqs link

--- a/pages/gonio_functionsUsage.html
+++ b/pages/gonio_functionsUsage.html
@@ -96,7 +96,7 @@ Zvuk už je nahratý v počítači no jeho graf je príliš komplikovaný na vys
 
 Najľahší je úplne obyčajný sínus. Dá sa meniť jeho frekvencia a amplitúda. Rýchlo si spomeň, čo sú zač tieto veci a ako sa dajú meniť. <b>Čím je frekvencia menšia, tým je zvuk hlbší</b>. Naopak, čím je frekvencia väčšia, tým je zvuk vyšší. <b>My ľudia počujeme frekvencie v rozsahu od 20Hz do 20kHz</b>. Keď počúvame zvuk s frekvenciou 20Hz, prichádza do nášho ucha 20 zvukových vĺn za sekundu. 20kHz je najvyšší zvuk, ktorý počujeme. Určite vieš, že keď počúvame zvuk s frekvenciou 20kHz, je to zvuk s frekvenciou 20 000Hz (premieňanie jednotiek). Vtedy do nášho ucha prichádza až 20 000 zvukových vĺn za sekundu. <b>Amplitúda mení hlasitosť zvuku. Čím je väčšia, tým je zvuk hlasnejší.</b><br /><br />
 
-Ako názornú ukážku sme si vybrali tón A4. Má peknú okrúhlu frekvenciu 440Hz. Prvý je tón A s amplitúdou 1 a druhý s amplitúdou 0,025. Čo myslíš, ktorý z nich bude hlasnejší? Tretí tón je tiež tón A, ale posunutý o oktávu nižšie. Jeho frekvencia je 220Hz. Ktorý z nich bude hlbší? Frekvencie všetkých tónov si môžeš pozrieť na <a href="https://pages.mtu.edu/~suits/notefreqs.html" target="_blank">tejto stránke</a>.<br /><br />
+Ako názornú ukážku sme si vybrali tón A4. Má peknú okrúhlu frekvenciu 440Hz. Prvý je tón A s amplitúdou 1 a druhý s amplitúdou 0,025. Čo myslíš, ktorý z nich bude hlasnejší? Tretí tón je tiež tón A, ale posunutý o oktávu nižšie. Jeho frekvencia je 220Hz. Ktorý z nich bude hlbší? Frekvencie všetkých tónov si môžeš pozrieť na <a href="https://www.profdong.com/elc4351/notefreqs.html" target="_blank">tejto stránke</a>.<br /><br />
 
 <div class="audioPlayer">
 Tón A4. Frekvencia 440Hz. Amplitúda 1.<br />
